feat:add googel pauth

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,24 @@
-# --- Python 編譯產物 ---
+# Environment
+.env
+.venv/
+venv/
+
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-.venv/
+*.so
+.Python
+*.egg-info/
+dist/
+build/
 
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
 
-
-
+# OS
+.DS_Store
+Thumbs.db
